--- a/1-9en.css
+++ b/1-9en.css
@@ -19,6 +19,7 @@ main {
 .step-box {
   width: 300px;
   margin-right: 30px;
+  margin-left: auto;
   padding: 10px;
   position: relative;
   background-color: #eee;
@@ -31,21 +32,21 @@ main {
 .step-img1 {
   height: 150px;
   background-image: url(img5/flow01.png);
-  background-position: bottom;
+  background-position: center;
   background-size: cover;
 }
 
 .step-img2 {
   height: 150px;
   background-image: url(img5/flow02.png);
-  background-position: bottom;
+  background-position: center;
   background-size: cover;
 }
 
 .step-img3 {
   height: 150px;
   background-image: url(img5/flow03.png);
-  background-position: bottom;
+  background-position: center;
   background-size: cover;
 }
 
@@ -68,17 +69,16 @@ footer {
 @media screen and (max-width: 768px) {
   header {
     width: 100%;
-    height: 100%;
   }
   main {
     width: 100%;
     height: auto;
     display: block;
+    padding: 50px;
   }
 
   .step-box {
-    width: 100%;
-    max-width: 100%;
+    width: 90%;
     height: auto;
   }
 
